# gunther-api

./: .cz.toml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  alembic.ini  docker-compose.standalone.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  octopus-project.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/hooks/: post-merge
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 31d4648b0fd2_create_banking_tables.py
api/: bruno.json
api/environments/: local.bru
api/item/: 01-create.bru  02-list.bru  03-get.bru  04-update.bru  05-delete.bru
docs/: api.md  architecture.md  configuration.md  contributing.md  getting-started.md  index.md  runbook.md
docs/adrs/: 001-initial-setup.md
infra/alertmanager/: alertmanager.yml
infra/alloy/: config.alloy
infra/grafana/dashboards/: dashboards.yaml
infra/grafana/datasources/: datasources.yaml
infra/loki/: loki.yaml
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
scripts/: gen_docs_env.py  seed.py  test_sync.py
src/app/: cli.py  main.py  worker.py
src/app/application/auth/: dtos.py
src/app/application/auth/use_cases/: login.py
src/app/application/banking/use_cases/: backfill_categories.py  sync_bank.py
src/app/application/item/: dtos.py
src/app/application/item/use_cases/: create_item.py  delete_item.py  get_item.py  list_items.py  update_item.py
src/app/application/tasks/: example.py
src/app/domain/auth/: value_objects.py
src/app/domain/banking/: entities.py
src/app/domain/item/: entity.py  repository.py
src/app/infrastructure/banking/gmail/: client.py
src/app/infrastructure/banking/importers/: base.py  c6.py  categorizer.py  nubank.py  nubank_account.py
src/app/infrastructure/cache/: redis.py
src/app/infrastructure/database/: base.py  models.py  session.py
src/app/infrastructure/database/banking/: models.py  repository.py
src/app/infrastructure/database/item/: model.py  repository.py
src/app/infrastructure/http/: client.py
src/app/infrastructure/security/: auth.py  jwt.py  passwords.py
src/app/infrastructure/telemetry/: logging.py  otel.py  sentry.py
src/app/presentation/api/v1/: health.py
src/app/presentation/api/v1/auth/: router.py
src/app/presentation/api/v1/banking/: router.py  schemas.py
src/app/presentation/api/v1/finance/: router.py
src/app/presentation/api/v1/item/: dependencies.py  router.py  schemas.py
src/app/presentation/middleware/: correlation.py  logging.py  rate_limit.py  security.py
src/app/shared/: config.py  correlation.py  exceptions.py
tests/: conftest.py  factories.py  fakes.py
tests/integration/: conftest.py  test_item_api.py
tests/integration/api/: test_banking_router.py  test_correlation_middleware.py  test_health.py
tests/integration/application/banking/: test_backfill_categories.py
tests/integration/infrastructure/: test_banking_repository.py  test_item_repository.py
tests/unit/: test_correlation.py  test_http_client.py  test_tasks.py
tests/unit/application/: test_auth.py  test_item_use_cases.py
tests/unit/application/banking/: test_sync_bank.py
tests/unit/domain/: test_item_entity.py  test_item_hypothesis.py
tests/unit/infrastructure/banking/: test_base.py  test_c6_importer.py  test_categorizer.py  test_nubank_account_importer.py  test_nubank_importer.py
