[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gunther_api"
version = "0.1.0"
description = "test"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115",
    "starlette>=0.40",
    "pydantic>=2.5",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "prometheus-client>=0.20",
    "sentry-sdk[fastapi]>=2.8",
    "httpx>=0.27",
    "tenacity>=8.3",
    "redis[hiredis]>=5.0",
    "slowapi>=0.1",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "pyjwt[crypto]>=2.9",
    "bcrypt>=4.1",
    "arq>=0.26",
    "google-auth>=2.20",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "pyzipper>=0.3.6",
]

[dependency-groups]
dev = [
    "debugpy>=1.8",
    "honcho>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "faker>=26.0",
    "factory-boy>=3.3",
    "testcontainers[postgres]>=4.7",
    "testcontainers[redis]>=4.7",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "semgrep>=1.80",
    "deptry>=0.16",
    "schemathesis>=3.29",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mike>=2.1",
    "mkdocs-mermaid2-plugin>=1.1",
    "commitizen>=3.27",
    "detect-secrets>=1.5",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "PTH", "ERA"]
ignore = ["S101", "S311"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105"]
"src/app/cli.py" = ["T201"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", "scripts/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "app.infrastructure.banking.gmail.client"
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--no-header -q"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.deptry.per_rule_ignores]
# Used via CLI / dynamically loaded, never imported directly in src/:
#   uvicorn   — process entrypoint (Procfile, Dockerfile, Makefile)
#   alembic   — migration CLI (alembic.ini, alembic/)
#   asyncpg   — loaded by SQLAlchemy via the postgresql+asyncpg:// URL scheme
#   google-auth-httplib2 — used internally by googleapiclient.discovery.build()
DEP002 = ["uvicorn", "alembic", "asyncpg", "google-auth-httplib2"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
bump_message = "chore(release): bump version $current_version → $new_version"

[tool.bandit]
skips = ["B101", "B601"]
targets = ["src"]
